--- a/the-meals/package.json
+++ b/the-meals/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "^5.11.8",
     "expo": "~40.0.0",
     "expo-app-loading": "^1.0.1",
     "expo-status-bar": "~1.0.3",
